# grpc-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: default.md  hotfix.md
docs/: PressureTest.CN.md  PressureTest.EN.md  README.CN.md  conf.py
src/grpc_framework/: __init__.py  application.py  config.py
src/grpc_framework/client/: __init__.py  channel_pool_manager.py  grpc_client.py
src/grpc_framework/core/: __init__.py  adaptor.py  error_handler.py  service.py
src/grpc_framework/core/adaptor/: domain.py  (+2 more)
src/grpc_framework/utils/: __init__.py  logger.py  proto_generator.py  reactive_context.py  sync2async_utils.py
tests/ex/: test_application.py
tests/example/: app.py  config.py  profile_service.py  user_service.py
tests/example_grpc_proto/: example.proto  example_pb2.py  example_pb2_grpc.py
tests/test_adaptor/: check_func_type.py
tests/test_call_app/: test_app.py
tests/test_client/: test_channel_pool.py  test_grpc_client.py
tests/test_config/: config.ini  config.json  config.py  config.yaml  test_config.py
tests/test_di/: test_a_error_thing.py  test_app_depneds_call.py  test_app_in_depends.py  test_app_integration.py  test_di.py  test_error_thing_call.py
tests/test_lifecycle/: test_lifecycle.py
tests/test_many_worker/: test_many_worker.py  test_worker_call.py
tests/test_native_app/: test_native.py
tests/test_pressure/: e_pb2.py  test_pressure.py
tests/test_serializtion/: test.proto  test_dataclass.py  test_pb2.py  test_pb2.pyi  test_pb2_grpc.py  test_serializtion.py
tests/test_service/: test_app_fbv.py  test_cbv.py  test_fbv.py
tests/test_utils/: test_proto_gen.py  test_s2a.py
(+14 files in other folders)
