[build-system]
requires = [
    "setuptools>=61.0",
    "grpcio>=1.73.1",
    "grpcio-reflection>=1.73.1",
    "protobuf>=6.31.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "grpc-framework"
version = "0.0.1.beta"
description = "Easy gRPC APIs Framework."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "surp1us"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = ["grpc", "framework", "grpcio"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[project.urls]
Homepage = "https://github.com/JokerCrying/py-depends-tools"
Repository = "https://github.com/JokerCrying/py-depends-tools"
"Bug Tracker" = "https://github.com/JokerCrying/py-depends-tools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py37']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true